// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 jXMNzs"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a danger color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 jybPLT"
    color="danger"
  />
</div>
`;

exports[`Spinner should render a large one 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 bQQdjY"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a primary color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 jXMNzs"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a small one 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 cMOwQU"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a success color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 hlexbv"
    color="success"
  />
</div>
`;

exports[`Spinner should render a warning color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 iIIpMO"
    color="warning"
  />
</div>
`;
